--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "young-utf",
   "license": "ISC",
   "dependencies": {
-    "react": "^0.13.3"
+    "react": "^0.13.3",
+    "react-router": "^0.13.3"
   },
   "devDependencies": {
     "babel-core": "^5.8.9",
