--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "babel-core": "^5.8.9",
     "babel-loader": "^5.3.2",
+    "react-hot-loader": "^1.2.8",
     "webpack": "^1.10.5"
   }
 }
