--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "young-utf",
   "license": "ISC",
   "dependencies": {
+    "firebase": "^2.2.7",
     "react": "^0.13.3",
-    "react-router": "^0.13.3"
+    "react-router": "^0.13.3",
+    "reactfire": "^0.5.0"
   },
   "devDependencies": {
     "babel-core": "^5.8.9",
