--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "young-utf",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.5.4",
     "firebase": "^2.2.7",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
